
Table display now uses the background color cyan for all cells containing new lines
  not only in SQL result tables and in Object tree "Content" tables.

Table cell data popup now offers find, Xml/Json-reformatting and export functions for all tables.
  To open the cell data popup double-click a table cell.

Bug fixes:

File export dialog: Removed red border line.

Show foreign key references' feature didn't show all FK-references to a table
  when the FK-references names were not unique.
  See right mouse menu of SQL results and table contentes in Object tree.

https://github.com/squirrel-sql-client/squirrel-sql-stable-releases/issues/2
  Ubuntu Installer failure: Installer threw an ArrayIndexOutOfBoundsException.
  Thanks to Francesco Goinavi for the pull request
  https://github.com/squirrel-sql-client/squirrel-sql-code/pull/65

Command line interface (CLI): Fixed UnsupportedOperationException when executing SQL statements.

When the database connection of a Session is broken the possible log message
  "Failed to read database meta data. Connection may have been closed by reconnect (Ctrl+T)"
  was corrected to
  "Failed to read database meta data. Connection may have been closed by reconnect (Ctrl+Alt+T)"

Refactoring Plugin:
  Dropping tables didn't respect configurations from Global Prefrences --> tab Refactoring.
  See right mouse menu on table in Object tree --> Refactoring --> Table --> Drop Table(s)

Fixed memory leak:
  Closed Sessions were not garbage collected when cell data dialogs had been opened.

Fixed possible NullPointerException which could occur in editable combo boxes.
  For example in the file export dialog.

When searching through all open SQL results, the findings were not correctly scrolled to.
  Hint: To open the new search dialog use the menu File --> Find in all results, ctrl shift R,
  or the new main window tool bar button.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/62