@@ -1,5 +1,14 @@
 package net.sourceforge.squirrel_sql.client.gui.db.aliasproperties;
 
+import java.awt.Color;
+import java.awt.Component;
+import java.io.File;
+import javax.swing.DefaultCellEditor;
+import javax.swing.JComboBox;
+import javax.swing.table.DefaultTableColumnModel;
+import javax.swing.table.TableCellEditor;
+import javax.swing.table.TableColumn;
+import javax.swing.table.TableColumnModel;
 import net.sourceforge.squirrel_sql.client.Main;
 import net.sourceforge.squirrel_sql.client.gui.db.ConnectToAliasCallBack;
 import net.sourceforge.squirrel_sql.client.gui.db.SQLAlias;
@@ -12,14 +21,6 @@ import net.sourceforge.squirrel_sql.fw.util.StringManagerFactory;
 import net.sourceforge.squirrel_sql.fw.util.log.ILogger;
 import net.sourceforge.squirrel_sql.fw.util.log.LoggerController;
 import org.apache.commons.lang3.StringUtils;
-
-import javax.swing.*;
-import javax.swing.table.DefaultTableColumnModel;
-import javax.swing.table.TableCellEditor;
-import javax.swing.table.TableColumn;
-import javax.swing.table.TableColumnModel;
-import java.awt.*;
-import java.io.File;
 
 public class SchemaPropertiesController implements IAliasPropertiesPanelController
 {
@@ -231,6 +232,12 @@ public class SchemaPropertiesController implements IAliasPropertiesPanelControll
 
    private void onClearSchemaTable()
    {
+      TableCellEditor cellEditor = _pnl.tblSchemas.getCellEditor();
+      if(null != cellEditor)
+      {
+         cellEditor.cancelCellEditing();
+      }
+
       _schemaTableModel.clear();
       _schemaTableWasCleared = true;
    }
